# robot-programming

./: .repos.jazzy  .rosinstall.melodic  .rosinstall.noetic  .travis.sh  .travis.yml  9.25_chap4.py  README.md  WARNINGS  cam.py  camera.py  enshu.rosinstall  homework.py  hw0611-3.py  image_process.py  imagemarker.py  index.html  kadai3.py  message.py  params.json  robot_programming_manual-images.aux  robot_programming_manual-images.pl  robot_programming_manual-images.tex  robot_programming_manual-node1.html  robot_programming_manual-node2.html  robot_programming_manual-node3.html  robot_programming_manual-node4.html  robot_programming_manual-node5.html  robot_programming_manual.css  robot_programming_manual.html  ros.py  ros12p.py  sample.py  send.py  spin.py  test.py  test.txt  trace.py  track_view.py  vcsinstall.noetic.yaml  view.py  (+5 more)
cart_humanoid/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cart_humanoid/config/: cart_humanoid_controllers.yaml  click_ik.rviz  sample_head_arm_skin_detect.rviz
cart_humanoid/euslisp/: cart_humanoid-ik.l  cart_humanoid-interface.l  realtime-ik-sample.l
cart_humanoid/launch/: cart_humanoid_gazebo.launch  click_ik_rviz.launch  sample_head_arm_skin_detect.launch
cart_humanoid/scripts/: sample_julius_cmd.py  skin_ellipse_area_to_ik_tgt.py  tuck_arm.py
cart_humanoid/urdf/: JAXON_RED.urdf.xacro  JAXON_RED_body.urdf  JAXON_RED_body_stable_inertia.urdf  hand.urdf.xacro  my_mesh.stl  my_model.urdf.xacro  robot.urdf.xacro
cart_humanoid/worlds/: humanoid_workspace.world
daisya_euslisp_tutorials/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
daisya_euslisp_tutorials/euslisp/: daisya-hanoi.l  daisya-ik.l  daisya-maze-2011.l  daisya-maze.l  daisya-qlearn.l  daisya-subsumption.l  daisya.l  gsearch.l  hanoi.l  hsearch.l  irteusext.l  maze.l  psolve.l  qlearn.l  robot-server-simulator.l  sample-robot-server.bak.l  sample-robot-server.l  sample-sim-real.l  sample-sim.l  sets.l  subsumption.l  virtual_interpolator.l
daisya_euslisp_tutorials/test/: test-daisya-ik.l  test-daisya-ik.launch  test-daisya-maze.l  test-daisya-maze.test  test-daisya.l  test-daisya.test  test-maze.l  test-maze.test  test-psolve.l  test-psolve.test  test-sample-robot-server.bak.l  test-sample-robot-server.bak.launch  test-sample-robot-server.l  test-sample-robot-server.launch  test-subsumption.l  test-subsumption.launch
dxl_armed_turtlebot/: .#zz  CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  rostest.py  viewer.py
dxl_armed_turtlebot/config/: cartographer.lua  dxl_armed_turtlebot.rviz  dxl_armed_turtlebot_controllers.yaml  map.pgm  map.yaml
dxl_armed_turtlebot/doc/: Makefile  robot_programming_manual.tex  robot_programming_model.l  robot_programming_ri.l
dxl_armed_turtlebot/euslisp/: arm-move-sample.l  display-bounding-box-array.l  display-checkerboard.l  dxl-armed-turtlebot-interface.l  dxl-armed-turtlebot.l  gazebo-grasp-test.l  gazebo-grasp-with-recognition.l  joy-sample.l  keyboard-ik-sample.l  realtime-ik-sample.l
dxl_armed_turtlebot/kadai/: checkpoint1-3-1-button.l  checkpoint1-3-2-led.l  checkpoint1_3_1_button.py  checkpoint1_3_2_led.py  checkpoint2-1-go-forward.l  checkpoint2-3-joy-ik.l  kadai1-3-1-button.l  kadai1-3-2-led.l  kadai1_3_1_button.py  kadai1_3_2_led.py  kadai2-1-go-forward.l  kadai2-3-joy-ik.l  kadai2_3_cmd_vel.py  kadai2_3_joint_command.py
dxl_armed_turtlebot/launch/: #test.python#  3dsensor.launch  IV2.py  amcl_demo.launch  blue.launch  checkerboard_detector.launch  checkerboard_detector_5x4.launch  checkerboard_detector_7x4.launch  dxl_armed_turtlebot_bringup.launch  dxl_armed_turtlebot_gazebo.launch  dxl_armed_turtlebot_navigation.launch  enshu.perspective  extract_blue.launch  hsi_color_filter.launch  image_viewer.py  pointcloud_screenpoint.launch  sample_head_arm_skin_detect.launch  smallcircle.py  sousin.py  test.py  turtlebot_joystick_teleop.launch  viewer.py  visualize.py
dxl_armed_turtlebot/map/: gazebo_world.pgm  gazebo_world.yaml  gazebo_world.yaml~
dxl_armed_turtlebot/models/: kobuki_hexagons_kinect.urdf
dxl_armed_turtlebot/scripts/: #kadai2.py#  .#kadai2.py  1017_ex3.py  170925kadai3.py  20161017-3.py  camshift.py  client.py  goal_otherwise_stop.py  image.py  image_marker.py  imagemaker.py  imageviewer.py  imageviewer.py~  install_ps3joy_daemon.sh  install_turtlebot_simulator.sh  kadaai.py  kadai  kadai.py  kadai2.py  kadai2.py~  kadai3.py  kadai3.py~  look_before_move.py  ps3joy  publish_marker.py  publisher.py  robot.py  roskadai.py  run.py  script.py  send_goal.py  send_goal_with_abort.py  send_vel.py  software_0617_question3.py  test.py  track_box_to_image_marker.py  track_box_viewer.py  tuck_arm.py  viewer.py  viewer.py~  (+4 more)
dxl_armed_turtlebot/task/: task3.py  task5.l
dxl_armed_turtlebot/test/: test-dxl-armed-turtlebot.l  test-dxl-armed-turtlebot.test
dxl_armed_turtlebot/urdf/: dynamixel_7dof_arm.urdf.xacro  robot.urdf.xacro
dxl_armed_turtlebot/worlds/: empty.world
dynamixel_7dof_arm/: CHANGELOG.rst  CMakeLists.txt  catkin.cmake  mainpage.dox  manifest.xml  package.xml  setup.py
dynamixel_7dof_arm/config/: dynamixel_joint_controllers.yaml
dynamixel_7dof_arm/euslisp/: dxl-7dof-arm-interface-common.l  dxl-7dof-arm-interface.l  dxl-7dof-arm-robot.l  thermo-speaker.l
dynamixel_7dof_arm/launch/: dynamixel_7dof_arm_bringup.launch  gripper_controller_spawner.launch
dynamixel_7dof_arm/scripts/: 58-dynamixel_configurator.rules  create_udev_rules  gripper_controller_spawner.sh  reset_torque.py  scan_ids.py
dynamixel_7dof_arm/test/: test-dxl-7dof-arm.l  test-dxl-7dof-arm.test
dynamixel_7dof_arm/urdf/: dynamixel_7dof_arm.urdf.xacro
jedy/jedy_bringup/: CMakeLists.txt  package.xml
jedy/jedy_description/: CMakeLists.txt  package.xml
jedy/kx_pr2_bringup/: package.xml
kx_pr2/kx_pr2_bringup/: CMakeLists.txt  package.xml
mechatrobot/: CHANGELOG.rst  CMakeLists.txt  package.xml
mechatrobot/config/: controllers.yaml  robot.rviz
mechatrobot/euslisp/: motor-command-by-face.l
turtleboteus/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+300 files in other folders)
