<package>
  <name>daisya_euslisp_tutorials</name>
  <version>4.0.0</version>
  <description>Daisya enshu</description>
  <license>BSD</license>
  <maintainer email="nozawa@jsk.imi.i.u-tokyo.ac.jp">Shunichi Nozawa</maintainer>
  <author email="nozawa@jsk.imi.i.u-tokyo.ac.jp">Shunichi Nozawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roseus</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>dxl_armed_turtlebot</build_depend>

  <run_depend>roseus</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>dxl_armed_turtlebot</run_depend>

</package>
