<package>
  <name>dxl_armed_turtlebot</name>
  <version>2.1.1</version>
  <description>Turtlebot with dynamixel 7dof arm</description>
  <license>BSD</license>
  <maintainer email="nozawa@jsk.imi.i.u-tokyo.ac.jp">Shunichi Nozawa</maintainer>
  <author email="nozawa@jsk.imi.i.u-tokyo.ac.jp">Shunichi Nozawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_urdf</build_depend>
  <build_depend>dynamixel_7dof_arm</build_depend>
  <build_depend>turtleboteus</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rqt_joint_trajectory_controller</build_depend>
  <build_depend>teleop_twist_keyboard</build_depend>

  <run_depend>dynamixel_urdf</run_depend>
  <run_depend>dynamixel_7dof_arm</run_depend>
  <run_depend>turtleboteus</run_depend>
  <run_depend>rqt_joint_trajectory_controller</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
</package>
