<package>
  <name>dynamixel_7dof_arm</name>
  <version>1.0.0</version>
  <description>7dof dynamixel motor arm</description>
  <license>BSD</license>
  <maintainer email="nozawa@jsk.imi.i.u-tokyo.ac.jp">Shunichi Nozawa</maintainer>
  <author email="nozawa@jsk.imi.i.u-tokyo.ac.jp">Shunichi Nozawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_controllers</build_depend>
  <run_depend>dynamixel_controllers</run_depend>
</package>
