<?xml version="1.0"?>
<package>
  <name>turtleboteus</name>
  <version>6.0.0</version>
  <description>The turtleboteus package</description>
  <license>BSD</license>
  <maintainer email="nozawa@jsk.imi.i.u-tokyo.ac.jp">Shunichi Nozawa</maintainer>
  <author email="nozawa@jsk.imi.i.u-tokyo.ac.jp">Shunichi Nozawa</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kobuki_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>pr2eus</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>kobuki_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>pr2eus</run_depend>
  <run_depend>rostest</run_depend>
</package>
