<?xml version="1.0"?>
<package format="3">
  <name>jedy_bringup</name>
  <version>8.0.0</version>
  <description>JEDY bringup for jsk robot programming enshu (ROS2)</description>
  <maintainer email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>jedy_description</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
